--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 
 #calc{
     margin: auto;
-    height: 67%;
+    height: 510px;
     width: 320px;
     background-color: rgb(201, 194, 194);
     border-radius: .25rem;
@@ -97,20 +97,59 @@ button:active:nth-child(20){
 
 
 /* Responsive */
-
 @media (max-width: 480px) {
-
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 body{
-    background-color: black;
+    background-color: darkslategrey;
    
 }
-    
+input{
+    text-overflow: ellipsis;
+}
+
+#calc{
+    height: 510px;
+    width: 300px;
+    background-color: rgb(201, 194, 194);
+    border-radius: .25rem;
+ 
+}
+#resultCal{
+    height: 120px;
+    background-color: yellowgreen;
+}
+#historyCal{
+    text-align: right;
+    height: 30px;
+    margin: 0 5px;
+    font-size: 10px;
+}
+#outputCal{
+    text-align: right;
+    height: 60px;
+    margin: 5px 5px;
+    font-size: 20px;
+}
+.keysCal{
+    height: 100%;
+}
+
+button{
+    float: left;
+    border-radius: 50%;
+    border: 0;
+    height: 40px;
+    width: 40px;
+    margin: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
 button:active{
-    font-size: 13px;
+    font-size: 10px;
 }
 button:focus{
     outline: 0;
@@ -152,6 +191,5 @@ button:active:nth-child(16){
 button:active:nth-child(20){
     font-size: 13px;
 }
-
 
 }
