--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ input{
 }
 #resultCal{
     height: 120px;
-    background-color: yellowgreen;
+    background-color: pink;
 }
 #historyCal{
     text-align: right;
