--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,7 @@ button:active:nth-child(20){
 }
 body{
     background-color: darkslategrey;
-    height:600px;
-   
+    height: 100%;   
 }
 input{
     text-overflow: ellipsis;
