--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@ body{
     background-color: darkslategrey;
 }
 
+p{
+    display: block;
+    text-overflow: ellipsis;
+    text-align: center;
+    line-height: 20px;
+    text-size-adjust:auto;
+    font-size: 5vw;
+}
+
 #calc{
     margin: auto;
     height: 510px;
@@ -111,6 +120,7 @@ p{
     text-align: center;
     line-height: 20px;
     text-size-adjust:auto;
+    font-size: 3vw;
 }
 
 #calc{
@@ -217,6 +227,7 @@ button:active:nth-child(20){
         text-align: center;
         line-height: 20px;
         text-size-adjust:auto;
+        font-size: 5vw;
     }
     
     #calc{
